--- a/views/compliance_document_views.xml
+++ b/views/compliance_document_views.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+=<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
         <!-- Document Tree View -->
@@ -13,6 +13,7 @@
                     <field name="upload_date"/>
                     <field name="expiry_date"/>
                     <field name="is_valid" widget="boolean"/>
+                    <field name="attachment_name" string="File Name"/>
                 </tree>
             </field>
         </record>
@@ -23,6 +24,10 @@
             <field name="model">compliance.document</field>
             <field name="arch" type="xml">
                 <form>
+                    <header>
+                        <button name="action_open_document" string="View Document" type="object" 
+                                class="oe_highlight" attrs="{'invisible': [('attachment_id', '=', False)]}"/>
+                    </header>
                     <sheet>
                         <div class="oe_title">
                             <h1>
@@ -45,7 +50,10 @@
                             <field name="description" placeholder="Enter document description..."/>
                         </group>
                         <group>
-                            <field name="file" filename="file_name"/>
+                            <field name="attachment_id" widget="binary" string="Upload Document"/>
+                            <field name="attachment_name" readonly="1"/>
+                            <field name="attachment_type" readonly="1"/>
+                            <field name="attachment_size" readonly="1"/>
                         </group>
                     </sheet>
                 </form>
@@ -61,6 +69,7 @@
                 <p class="o_view_nocontent_smiling_face">
                     No compliance documents found
                 </p>
+                <p>Upload documents to prove compliance with regulations</p>
             </field>
         </record>
         
